# ppt_image_translator2

./: .gitignore  _xml_extract.py  _xml_extract_test.py  chart_xml_handler.py  config.py  interfaces.py  main.py  ocr_handler.py  ollama_service.py  pptx_handler.py  pyproject.toml  translator.py  user_settings.json  utils.py
assets/: app_icon.icns
hist/: translation_history.json
